# mol-bhav

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.mongo  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: auth.py  config.py  logging_config.py  main.py  middleware.py
app/api/: beckn.py  deps.py  negotiate.py  products.py  sessions.py
app/db/: mongo.py  redis.py
app/dialogue/: __init__.py  generator.py  sentiment.py
app/dialogue/prompts/: bundle.txt  system.txt  walk_away.txt
app/engine/: bot_detector.py  concession.py  reciprocity.py  state_machine.py  validator.py
app/models/: beckn.py  offer.py  product.py  session.py
app/protocol/: beckn_stub.py  digital_signature.py  quote_builder.py
app/services/: coupon_service.py  negotiation_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: LanguageToggle.tsx  Navbar.tsx  ProductGrid.tsx
frontend/src/components/negotiation/: BazaarBotAvatar.tsx  ChatThread.tsx  DigitalFlounce.tsx  FairnessMeter.tsx  NegotiationDrawer.tsx  PriceInput.tsx  (+2 more)
frontend/src/lib/: api.ts  constants.ts
frontend/src/stores/: negotiation.ts
frontend/src/types/: index.ts
scripts/: seed.py
tests/: test_api_integration.py  test_auth.py  test_beckn.py  test_bot_detector.py  test_concession.py  test_dialogue_generator.py  test_e2e_negotiation.py  test_quote_builder.py  test_rate_limit.py  test_reciprocity.py  test_sentiment.py  test_state_machine.py  test_validator.py
(+3 files in other folders)
